js/js.translator/testData/incremental/invalidation/splitJoinModule/lib1/l1.4.kt
fun fooA() = 3

fun fooB() = 3

fun fooC() = 4
